# callit.dot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LOG.md  Makefile  PROJECT.md  README.md  RETROSPECTIVE.md  SLIDES_SCRIPT.md  deployments.json
.github/workflows/: deploy-frontend.yml  deploy-github-pages.yml
blockchain/: Dockerfile  README.md  chain_spec.json
blockchain/runtime/: Cargo.toml  README.md
blockchain/runtime/src/: lib.rs
cli/: Cargo.toml  README.md
cli/src/: lib.rs  main.rs
cli/src/commands/: chain.rs  contract.rs  deployments.rs  market.rs  mod.rs  prove.rs  signer.rs
contracts/: README.md
contracts/evm/: hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/evm/contracts/: PredictionMarket.sol
contracts/evm/scripts/: deploy.ts  deployments.ts  smoke-market.ts
contracts/evm/test/: PredictionMarket.test.ts
contracts/pvm/: hardhat.config.ts  package-lock.json  package.json
contracts/pvm/contracts/: PredictionMarket.sol
contracts/pvm/scripts/: deploy-paseo-hub.ts  deploy.ts  deployments.ts
docker/: Dockerfile.node
docs/: DEPLOYMENT.md  INSTALL.md  PALLET_REVIVE_NOTES.md  TOOLS.md
scripts/: common.sh  deploy-frontend.sh  deploy-paseo.sh  start-all.sh  start-dev.sh  start-frontend.sh  start-local.sh  test-statement-store-smoke.sh  test-zombienet.sh
slides/: README.md  frontend.ts  index.html  index.ts  package.json  reveal-docs.md  styles.css
web/: .env.example  index.html  package-lock.json  package.json
web/.papi/: polkadot-api.json
web/src/: App.tsx  index.css  main.tsx
(+21 files in other folders)
