[package]
name = "callit-cli"
description = "CLI tool for interacting with the Callit chain via subxt and alloy."
version = "0.1.0"
license.workspace = true
authors.workspace = true
edition.workspace = true
publish = false

[dependencies]
subxt = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true }
clap = { version = "4", features = ["derive", "env"] }
serde = { workspace = true, features = ["std", "derive"] }
serde_json = { workspace = true, features = ["std"] }
hex = "0.4"
blake2 = "0.10"
rmcp = { version = "1.5", features = ["transport-io"] }

[[bin]]
name = "callit-cli"
path = "src/main.rs"

[[bin]]
name = "callit-mcp"
path = "src/bin/mcp.rs"
